# RangeProof

bulletproof_rangeproof/: Cargo.toml  README.md
bulletproof_rangeproof/src/: main.rs
circom-range-proof/: README.md  results  scripts
circom-range-proof/RangeProof_1024_js/: RangeProof_1024.wasm
circom-range-proof/RangeProof_128_js/: RangeProof_128.wasm
circom-range-proof/RangeProof_16_js/: RangeProof_16.wasm
circom-range-proof/RangeProof_256_js/: RangeProof_256.wasm
circom-range-proof/RangeProof_32_js/: RangeProof_32.wasm
circom-range-proof/RangeProof_512_js/: RangeProof_512.wasm
circom-range-proof/RangeProof_8_js/: RangeProof_8.wasm
circom-range-proof/RangeProof_js/: RangeProof.wasm
circom_rangeproof/: README.md  build  circuits
circom_rangeproof/RangeProof_16_js/: RangeProof_16.wasm
circom_rangeproof/RangeProof_32_js/: RangeProof_32.wasm
circom_rangeproof/RangeProof_64_js/: RangeProof_64.wasm
cuproof/: Cargo.toml  README.md
cuproof/cuproof-blockchain/: README.md  deployment-info.json  hardhat.config.js  package-lock.json  package.json  params.txt  proof_evm.json
cuproof/cuproof-blockchain/contracts/: CuproofVerifier256.sol  CuproofVerifier256Simple.sol
cuproof/cuproof-blockchain/scripts/: deploy-256.js  verify-256.js
cuproof/src/: benchmark.rs  commitment.rs  fiat_shamir.rs  lagrange.rs  lib.rs  main.rs  range_proof.rs  setup.rs  util.rs  verify.rs
cuproof/src_256/: benchmark.rs  commitment.rs  evm.rs  fiat_shamir.rs  lagrange.rs  lib.rs  main.rs  range_proof.rs  setup.rs  util.rs  verify.rs
(+1 files in other folders)
