[package]
name = "cuproof"
version = "0.1.0"
edition = "2024"

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
num-integer = "0.1"
rand = "0.8"
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"

[features]
stats = []

[lib]
name = "cuproof"
path = "src/lib.rs"

[[bin]]
name = "cuproof"
path = "src/main.rs"

[[bin]]
name = "cuproof256"
path = "src_256/main.rs"

[dev-dependencies]
criterion = "0.5"
